# CxKitty

./: .gitignore  BUILD_README.md  Dockerfile  build.bat  build_exe.py  config.py  config.yml  dialog.py  main.py  notification.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: package-exe.yml
cxapi/: schema.py  session.py
webapp/: app.py
webapp/static/: xterm.js
webapp/templates/: index.html  log.html  login.html  terminal.html
