[tool.poetry]
name = "CxKitty"
version = "0.4.6"
description = "超星学习通答题姬. 媒体播放、章节测验、课程考试, 集成式自动化工具"
license = "GPL-3.0"
authors = ["SocialSisterYi <1440239038@qq.com>"]
readme = "README.md"
repository = "https://github.com/SocialSisterYi/CxKitty"
package-mode = false



[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
qrcode = "^7.4.2"
rich = "^13.7.0"
pycryptodome = "^3.19.0"
lxml = "^4.9.3"
pyyaml = "^6.0.1"
jsonpath-python = "^1.0.6"
beautifulsoup4 = "^4.12.2"
ddddocr = "^1.4.11"
numpy = "^1.26.0"
opencv-python = "^4.8.1.78"
dataclasses-json = "^0.6.1"
yarl = "^1.9.4"
openai = "^1.14.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
